fix(fileInput): Fix alignment of file input dropzone icon

--- a/src/elements/form/extras/file/FileInput.scss
+++ b/src/elements/form/extras/file/FileInput.scss
@@ -82,6 +82,10 @@ novo-file-input {
             small {
                 margin-top: 7px;
             }
+            i.bhi-dropzone {
+                float: left;
+                margin: -17px .25em 0 0;
+            }
             &.boxed {
                 border: 2px dashed $grey;
             }
